force-app/main/default/objects/Quick_case__c/Quick_case__c.object-meta.xml
<CustomObject>
    <label>Quick case</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Quick case No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>