force-app/main/default/objects/Quick_case__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Service - Project and Contract Financing</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>QR Branch</fullName>
            </value>
            <value>
                <fullName>RM/ARM/MM</fullName>
            </value>
            <value>
                <fullName>Social Media - Facebook</fullName>
            </value>
            <value>
                <fullName>Social Media - Pantip</fullName>
            </value>
            <value>
                <fullName>Social Media - Twitter</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>TMU</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>ZM/BDM/ABDM</fullName>
            </value>
            <value>
                <fullName>กระทรวงการคลัง</fullName>
            </value>
            <value>
                <fullName>ขายผลิตภัณฑ์ธุรกรรมทางการเงิน</fullName>
            </value>
            <value>
                <fullName>ธนาคารแห่งประเทศไทย</fullName>
            </value>
            <value>
                <fullName>บริการลูกค้าธุรกิจ (Client Implementation)</fullName>
            </value>
            <value>
                <fullName>บริการลูกค้าธุรกิจ (Corporate Call Center)</fullName>
            </value>
            <value>
                <fullName>บริการลูกค้าธุรกิจ (Investigation)</fullName>
            </value>
            <value>
                <fullName>บริษัท ข้อมูลเครดิตแห่งชาติ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัทหลักทรัพย์จัดการกองทุน ยูโอบี (ประเทศไทย) จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท เอฟดับบลิวดี ประกันชีวิต จำกัด (มหาชน) (FWD)</fullName>
            </value>
            <value>
                <fullName>บริหารข้อมูลเครดิตกลาง</fullName>
            </value>
            <value>
                <fullName>บริหารคุณภาพและติดตามกลุ่มสินเชื่อธุรกิจขนาดเล็ก (SEPM)</fullName>
            </value>
            <value>
                <fullName>ประธานเจ้าหน้าที่บริหาร</fullName>
            </value>
            <value>
                <fullName>มาติดต่อด้วยตนเอง</fullName>
            </value>
            <value>
                <fullName>ลูกค้าสัมพันธ์</fullName>
            </value>
            <value>
                <fullName>ศูนย์ดำเนินการข้อร้องเรียนลูกค้า</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>