force-app/main/default/objects/Quick_case__c/fields/Close_By_BU__c.field-meta.xml
<CustomField>
    <fullName>Close_By_BU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close By BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>