force-app/main/default/objects/Quick_case__c/fields/FCR_Flag__c.field-meta.xml
<CustomField>
    <fullName>FCR_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FCR Flag</label>
    <type>Checkbox</type>
</CustomField>