force-app/main/default/objects/Quick_case__c/fields/Issue_Cause__c.field-meta.xml
<CustomField>
    <fullName>Issue_Cause__c</fullName>
    <label>Issue Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TMB_Application Error</fullName>
            </value>
            <value>
                <fullName>TMB_Network ขัดข้อง</fullName>
            </value>
            <value>
                <fullName>TMB_Set Up ข้อมูลไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>TMB_ข้อมูลผลิตภัณฑ์/Campaignไม่ชัดเจน</fullName>
            </value>
            <value>
                <fullName>TMB_ข้อมูลในระบบไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>TMB_ปัญหาอื่นๆ จากกระบวนการภายใน</fullName>
            </value>
            <value>
                <fullName>TMB_ปัญหาอื่นๆ จากพนักงาน</fullName>
            </value>
            <value>
                <fullName>TMB_ระบบงานภายในขัดข้อง</fullName>
            </value>
            <value>
                <fullName>TMB_ระบบภายในปิดปรับปรุง</fullName>
            </value>
            <value>
                <fullName>TMB_เจ้าหน้าที่ดำเนินการล่าช้า</fullName>
            </value>
            <value>
                <fullName>TMB_เจ้าหน้าที่ทำรายการไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>TMB_เจ้าหน้าที่สอนการใช้งานระบบให้ลูกค้าไม่ครบถ้วน</fullName>
            </value>
            <value>
                <fullName>TMB_เจ้าหน้าที่สาขาทำรายการไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>TMB_เจ้าหน้าที่ให้ข้อมูลลูกค้าไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>TMB_ไม่มีProcess รองรับความต้องการลูกค้า</fullName>
            </value>
            <value>
                <fullName>TMB_ไม่เป็นไปตามนโยบายและหลักการปฏิบัติของธนาคาร</fullName>
            </value>
            <value>
                <fullName>TMB_Hard Disk เสีย</fullName>
            </value>
            <value>
                <fullName>TMB_ธนบัตรติด</fullName>
            </value>
            <value>
                <fullName>TMB_การสื่อสารขัดข้อง Host Down</fullName>
            </value>
            <value>
                <fullName>TMB_ไฟดับ</fullName>
            </value>
            <value>
                <fullName>TMB_Time out</fullName>
            </value>
            <value>
                <fullName>TMB_Hardware ขัดข้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_ATM Timeout</fullName>
            </value>
            <value>
                <fullName>Third Party_Hardware_Machine_Error</fullName>
            </value>
            <value>
                <fullName>Third Party_Network ขัดข้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_ระบบงานภายนอกขัดข้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_ระบบภายนอกปิดปรับปรุง</fullName>
            </value>
            <value>
                <fullName>Third Party_ระบบเครื่อข่ายภายนอกขัดข้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_ระบบเครื่อข่ายภายนอกขัดข้อง_ไฟฟ้าดับ</fullName>
            </value>
            <value>
                <fullName>Third Party_อยู่ระหว่างตรวจสอบ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>