force-app/main/default/objects/Quick_case__c/fields/Issue_Cause_Detail__c.field-meta.xml
<CustomField>
    <fullName>Issue_Cause_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Cause Detail</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>