force-app/main/default/objects/Quick_case__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <label>Journey</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest / Inquiry</fullName>
            </value>
            <value>
                <fullName>Apply / Approve</fullName>
            </value>
            <value>
                <fullName>After Used</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>