force-app/main/default/objects/Quick_case__c/fields/Problem_Channel__c.field-meta.xml
<CustomField>
    <fullName>Problem_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Problem Channel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>