force-app/main/default/objects/Quick_case__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product/Service</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>