force-app/main/default/objects/Quick_case__c/fields/Quick_Issue__c.field-meta.xml
<CustomField>
    <fullName>Quick_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Quick Issue</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>