force-app/main/default/objects/Quick_case__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT ดำเนินการแก้ไขระบบ</fullName>
            </value>
            <value>
                <fullName>ปรับปรุงการ Set Up ให้ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>ชีแจงข้อมูลที่ถูกต้องให้ลูกค้ารับทราบ</fullName>
            </value>
            <value>
                <fullName>เจ้าหน้าที่แก้ไขรายการให้ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>ปรับปรุง/แก้ไขรายการให้ลูกค้า</fullName>
            </value>
            <value>
                <fullName>แนะนำให้ลูกค้ารับทราบ</fullName>
            </value>
            <value>
                <fullName>ปรับปรุงเงินคืน</fullName>
            </value>
            <value>
                <fullName>ปรับปรุงคะแนนคืน</fullName>
            </value>
            <value>
                <fullName>ยืนยันรายการปกติ</fullName>
            </value>
            <value>
                <fullName>ดำเนินการตามที่ลูกค้าร้องขอ</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>