force-app/main/default/objects/Quick_case__c/fields/Resolution_Detail__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution Detail</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>