force-app/main/default/objects/Quick_case__c/fields/Service_issue_EN__c.field-meta.xml
<CustomField>
    <fullName>Service_issue_EN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service issue EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>