force-app/main/default/objects/Quick_case__c/fields/Service_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Type Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>