force-app/main/default/objects/Quick_case__c/validationRules/validate_FCR.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_FCR</fullName>
    <active>true</active>
    <errorConditionFormula>if(FCR_Flag__c = true, AND(TEXT(Status__c) != &apos;Completed&apos;, TEXT(Status__c) != &apos;Cancel&apos;),false)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>กรุณาระบุ Status ให้ถูกต้อง</errorMessage>
</ValidationRule>