force-app/main/default/objects/Quick_case__c/validationRules/Validate_Issue_Quick_Cause_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Issue_Quick_Cause_Detail</fullName>
    <active>true</active>
    <errorConditionFormula>If(AND(TEXT(Issue_Cause__c
) = &apos;Other&apos;, Issue_Cause_Detail__c = &apos;&apos; ), True, False)</errorConditionFormula>
    <errorDisplayField>Issue_Cause_Detail__c</errorDisplayField>
    <errorMessage>Issue Cause เป็น Other กรุณาอธิบายเพิ่มเติม</errorMessage>
</ValidationRule>