force-app/main/default/objects/Quick_case__c/validationRules/Validate_Resolution_Detail_Quick_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Resolution_Detail_Quick_Case</fullName>
    <active>true</active>
    <errorConditionFormula>If(AND(TEXT(Resolution__c
) = &apos;Other&apos;, Resolution_Detail__c = &apos;&apos; ), True, False)</errorConditionFormula>
    <errorDisplayField>Resolution_Detail__c</errorDisplayField>
    <errorMessage>Resolution เป็น Other กรุณาอธิบายเพิ่มเติม</errorMessage>
</ValidationRule>