force-app/main/default/objects/Quick_case__c/validationRules/Validate_Resolved_Issue_Quick_Cause.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Resolved_Issue_Quick_Cause</fullName>
    <active>true</active>
    <errorConditionFormula>if( AND(OR(TEXT(Status__c) = &apos;Resolved&apos;,TEXT(Status__c) = &apos;Completed&apos;,TEXT(Status__c) = &apos;Cancel&apos;), TEXT(Issue_Cause__c) = &apos;&apos;), true, false)</errorConditionFormula>
    <errorDisplayField>Issue_Cause__c</errorDisplayField>
    <errorMessage>กรุณาระบุค่า</errorMessage>
</ValidationRule>