force-app/main/default/objects/Quick_case__c/validationRules/Validate_Resolved_Resolution_Quick_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Resolved_Resolution_Quick_Case</fullName>
    <active>true</active>
    <errorConditionFormula>if( AND(OR(TEXT(Status__c) = &apos;Resolved&apos;,TEXT(Status__c) = &apos;Completed&apos;,TEXT(Status__c) = &apos;Cancel&apos;), TEXT(Resolution__c) = &apos;&apos;), true, false)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>กรุณาระบุค่า</errorMessage>
</ValidationRule>