force-app/main/default/objects/Quick_case__c/listViews/All_Quick_Case.listView-meta.xml
<ListView>
    <fullName>All_Quick_Case</fullName>
    <columns>NAME</columns>
    <columns>Quick_Issue__c</columns>
    <columns>Subject__c</columns>
    <columns>Active__c</columns>
    <columns>Segment__c</columns>
    <columns>Category__c</columns>
    <columns>Problem_Channel__c</columns>
    <columns>Product_Service__c</columns>
    <columns>Issue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quick Case</label>
    <language>en_US</language>
</ListView>